# eth-global-bingo-game-backend

./: .gitignore  Cargo.toml  README.md
contracts/: Bingo.sol  Bingo_with_backend.sol
src/: main.rs
