[package]
name = "rust_evm"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version="2.0", features = ["legacy","abigen"] }
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
rocket = { version = "0.5", features = ["json"] }
serde_json = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
rand = "0.8.5"
rocket_cors = "0.6.0"
